working on options screen

--- a/electron/public/config.html
+++ b/electron/public/config.html
@@ -37,5 +37,10 @@
       <button type="button" class="btn btn-primary sharp-button save-button" disabled=true>Save</button>
     </div>
   </div>
+  <div class="options-container">
+    <div class="options-change-background-image-enclosure"> </div>
+    <div class="options-change-measurement-units-enclosure"></div>
+    <div class="options-save-cancel-button-enclosure"></div>
+  </div>
 </body>
 </html>
