--- a/electron/public/current-forecast.html
+++ b/electron/public/current-forecast.html
@@ -18,7 +18,7 @@
       <div class="city-temp-enclosure enclosure">
         <div class="city-name">_</div>
         <div class="temp-enclosure enclosure"> 
-          <div class="temperature-actual">_°</div>
+          <div class="temperature-actual"></div>
           <div class="temperature-feels-like">_</div>
         </div>
         <div class="current-weather-conditions">Test condition</p></div>
