added HTML elements and functions for the options and configuration screen

--- a/electron/public/config.html
+++ b/electron/public/config.html
@@ -38,7 +38,9 @@
     </div>
   </div>
   <div class="options-container">
-    <div class="options-change-background-image-enclosure"> </div>
+    <div class="options-change-background-image-enclosure"> 
+      <!-- This guys displays thumbnails of the background image options-->
+    </div>
     <div class="options-change-measurement-units-enclosure"></div>
     <div class="options-save-cancel-button-enclosure"></div>
   </div>
