added toggling of metric imperial settings. Fixed backgroundImage loading when image is undefined

--- a/electron/public/current-forecast.html
+++ b/electron/public/current-forecast.html
@@ -43,7 +43,13 @@
       </div>
     </div>
     <div class="bottom-strip">
-    
+      <!-- This strip will have forecasted weather 'cards'-->
+      <div class="forecast-cards-enclosure enclosure">
+        <!--Forecast cards go here -->
+        <div class="weather-card">
+          
+        </div>
+      </div>
     </div>
   </div>
 </body>
