--- a/electron/public/config.html
+++ b/electron/public/config.html
@@ -50,7 +50,7 @@
       </div>
       <div class="btn-group btn-group-toggle" data-toggle="buttons">
         <label class="btn btn-secondary metric active">
-          <input type="radio" name="options" id="option_metric" checked> Metric
+          <input type="radio" name="options" id="option_metric"> Metric
         </label>
         <label class="btn btn-secondary imperial">
           <input type="radio" name="options" id="option_imperial"> Imperial
