added jest tests. Canadian cities .json

--- a/electron/public/current-forecast.html
+++ b/electron/public/current-forecast.html
@@ -31,6 +31,12 @@
           <div class="wind-speed"></div> <div class="separator"> | </div>
           <div class="wind-gust"></div>
         </div>
+        <div class="pressure-main-enclosure enclosure"> <div class="category"> Pressure </div> <div class="separator"> | </div>
+          <div class="atmospheric-pressure"></div>
+        </div>
+        <div class="humidity-main-enclosure enclosure"> <div class="category"> Humidity </div> <div class="separator"> | </div>
+          <div class="humidity"></div>
+        </div>
         <div class="sunrise-set-enclosure enclosure"> <div class="category"> Sun </div> <div class="separator"> | </div>
           <div class="sun-sunrise"></div> <div class="separator"> | </div>
           <div class="sun-sunset"></div>
@@ -47,7 +53,7 @@
       <div class="forecast-cards-enclosure enclosure">
         <!--Forecast cards go here -->
         <div class="weather-card">
-          
+
         </div>
       </div>
     </div>
