added humidity value to current weather

--- a/electron/public/current-forecast.html
+++ b/electron/public/current-forecast.html
@@ -49,7 +49,7 @@
       </div>
     </div>
     <div class="bottom-strip">
-      <!-- This strip will have forecasted weather 'cards'-->
+      <!-- This strip will have forecast weather 'cards'-->
       <div class="forecast-cards-enclosure enclosure">
         <!--Forecast cards go here -->
         <div class="weather-card">
