--- a/electron/public/current-forecast.html
+++ b/electron/public/current-forecast.html
@@ -52,11 +52,14 @@
       <!-- This strip will have forecast weather 'cards'-->
       <div class="forecast-cards-enclosure enclosure">
         <!--Forecast cards go here -->
-        <div class="weather-card">
-
-        </div>
+        
       </div>
     </div>
   </div>
 </body>
 </html>
+<template>
+  <div class="weather-card">
+
+  </div>
+</template>
