began card template

--- a/electron/public/current-forecast.html
+++ b/electron/public/current-forecast.html
@@ -60,6 +60,10 @@
 </html>
 <template>
   <div class="weather-card">
+    <div class="weather-card-temperature-enclosure">
+      <div class="card-temperature">
 
+      </div>
+    </div>
   </div>
 </template>
