--- a/electron/public/config.html
+++ b/electron/public/config.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
   <link rel="stylesheet" href="../styles/main.css">
+  <script src="https://kit.fontawesome.com/9566ef13c4.js" crossorigin="anonymous"></script>
 <!-- Optional theme -->
   <title>Easy Weather - Configure City</title>
 </head>
@@ -58,6 +59,11 @@
       </div>
     </div>
     <div class="options-save-cancel-button-enclosure"></div>
+  </div>
+  <div class="close-config-enclosure enclosure">
+    <div class="close-settings-icon">
+      <i class="fas fa-times"></i>
+    </div>
   </div>
 </body>
 </html>
