completed auto-refresh feature and modified some CSS

--- a/electron/public/current-forecast.html
+++ b/electron/public/current-forecast.html
@@ -41,6 +41,7 @@
           <div class="sun-sunrise"></div> <div class="separator"> | </div>
           <div class="sun-sunset"></div>
         </div>
+        <div class="weather-forecast-auto-update"></div>
       </div>
       <div class="options-settings-enclosure enclosure">
         <div class="settings-icon">
