--- a/electron/public/current-forecast.html
+++ b/electron/public/current-forecast.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <script async src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous" async></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <script async src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous" async>
+  </script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+    integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/9566ef13c4.js" crossorigin="anonymous"></script>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../styles/weather.css">
@@ -11,34 +16,47 @@
   <script async type="module" src="../scripts/current-forecast.js"></script>
   <title>Current Forecast</title>
 </head>
+
 <body class="current-forecast-background-image">
   <div class="main-enclosure">
     <div class="top-strip">
       <div class="current-conditions-icon"></div>
       <div class="city-temp-enclosure enclosure">
         <div class="city-name">_</div>
-        <div class="temp-enclosure enclosure"> 
+        <div class="temp-enclosure enclosure">
           <div class="temperature-actual"></div>
           <div class="temperature-feels-like">_</div>
         </div>
-        <div class="current-weather-conditions">Test condition</p></div>
-        <div class="weather-condition-description">Test condition</p></div>
+        <div class="current-weather-conditions">Test condition</p>
+        </div>
+        <div class="weather-condition-description">Test condition</p>
+        </div>
         <div class="date-time">date:time</div>
       </div>
       <!-- This enclosure will have status like wind speed, direction, humidity-->
       <div class="other-stats-enclosure enclosure">
-        <div class="wind-main-enclosure enclosure"> <div class="category"> Wind </div> <div class="separator"> | </div>
-          <div class="wind-speed"></div> <div class="separator"> | </div>
+        <div class="wind-main-enclosure enclosure">
+          <div class="category"> Wind </div>
+          <div class="separator"> | </div>
+          <div class="wind-speed"></div>
+          <div class="separator"> | </div>
           <div class="wind-gust"></div>
         </div>
-        <div class="pressure-main-enclosure enclosure"> <div class="category"> Pressure </div> <div class="separator"> | </div>
+        <div class="pressure-main-enclosure enclosure">
+          <div class="category"> Pressure </div>
+          <div class="separator"> | </div>
           <div class="atmospheric-pressure"></div>
         </div>
-        <div class="humidity-main-enclosure enclosure"> <div class="category"> Humidity </div> <div class="separator"> | </div>
+        <div class="humidity-main-enclosure enclosure">
+          <div class="category"> Humidity </div>
+          <div class="separator"> | </div>
           <div class="humidity"></div>
         </div>
-        <div class="sunrise-set-enclosure enclosure"> <div class="category"> Sun </div> <div class="separator"> | </div>
-          <div class="sun-sunrise"></div> <div class="separator"> | </div>
+        <div class="sunrise-set-enclosure enclosure">
+          <div class="category"> Sun </div>
+          <div class="separator"> | </div>
+          <div class="sun-sunrise"></div>
+          <div class="separator"> | </div>
           <div class="sun-sunset"></div>
         </div>
         <div class="weather-forecast-auto-update"></div>
@@ -51,11 +69,14 @@
     </div>
     <div class="bottom-strip">
       <!-- This strip will have forecast weather 'cards'-->
+      <div class="hourly-menu-enclosure">
+        <a class="hourly-view-link" href="hourly.html"> Hourly </a>
+      </div>
       <div class="forecast-cards-enclosure enclosure">
         <!--Forecast cards go here -->
-        
       </div>
     </div>
   </div>
 </body>
+
 </html>
