started a table for hourly forecast

--- a/electron/public/hourly.html
+++ b/electron/public/hourly.html
@@ -22,6 +22,19 @@
       <i class="fas fa-times"></i>
     </div>
   </div>
+  <!-- We'll use an unordered list to render the hourly forecasts -->
+  <div class="hourly-forecast-enclosure">
+    <table class="hourly-list-table-master table">
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Test Data</td>
+          <td>Test Data</td>
+          <td>@test_data</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </body>
 
 </html>
