created hourly strip template

--- a/electron/public/hourly.html
+++ b/electron/public/hourly.html
@@ -26,11 +26,15 @@
   <div class="hourly-forecast-enclosure">
     <table class="hourly-list-table-master table">
       <tbody>
-        <tr>
-          <th scope="row">1</th>
+        <tr class="tr-class-row-light">
           <td>Test Data</td>
           <td>Test Data</td>
           <td>@test_data</td>
+        </tr>
+        <tr class="tr-class-row-dark">
+          <td>Test Data2</td>
+          <td>Test Data2</td>
+          <td>@test_data2</td>
         </tr>
       </tbody>
     </table>
