templates and hourly data basics are displaying

--- a/electron/public/hourly.html
+++ b/electron/public/hourly.html
@@ -25,7 +25,7 @@
   <!-- We'll use an unordered list to render the hourly forecasts -->
   <div class="hourly-forecast-enclosure">
     <table class="hourly-list-table-master table">
-      <tbody>
+      <tbody class="hourly-forecast-table-body">
         <tr class="tr-class-row-light">
           <td>Test Data</td>
           <td>Test Data</td>
