--- a/electron/public/config.html
+++ b/electron/public/config.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script async type="module" src="../scripts/config.js"></script>
-  <script async src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous" async></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <script async src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous" async>
+  </script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+    integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
   <link rel="stylesheet" href="../styles/main.css">
   <script src="https://kit.fontawesome.com/9566ef13c4.js" crossorigin="anonymous"></script>
-<!-- Optional theme -->
+  <!-- Optional theme -->
   <title>Easy Weather - Configure City</title>
 </head>
+
 <body class="configuration-window">
   <div class="configuration-container">
     <div class="card card-search-enclosure margin-left search-page-width-items">
@@ -20,7 +26,8 @@
         <p class="card-text">Start typing a city to search. Pick a city from results and hit 'Save'</p>
       </div>
       <div class="input-group input-group-sm mb-3">
-        <input type="text" class="form-control city-search-box" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+        <input type="text" class="form-control city-search-box" aria-label="Sizing example input"
+          aria-describedby="inputGroup-sizing-sm">
       </div>
     </div>
     <div>
@@ -32,22 +39,22 @@
     </div>
     <div>
       <!-- Label that shows selected city-->
-      <p class= "h6 selected-city-label margin-left caption-label"> </p>
+      <p class="h6 selected-city-label margin-left caption-label"> </p>
     </div>
     <div class="save-city-div search-page-width-items margin-left">
       <button type="button" class="btn btn-primary sharp-button save-button" disabled=true>Save</button>
     </div>
   </div>
   <div class="options-container">
-    <div> 
-      <p class="h4"> Background Image </p>
+    <div>
+      <p class="h4 settings-header"> Background Image </p>
     </div>
-    <div class="options-change-background-image-enclosure"> 
+    <div class="options-change-background-image-enclosure">
       <!-- This guy displays thumbnails of the background image options-->
     </div>
     <div class="options-change-measurement-units-enclosure">
-      <div> 
-        <p class="h4"> Units </p>
+      <div>
+        <p class="h4 settings-header"> Units </p>
       </div>
       <div class="btn-group btn-group-toggle" data-toggle="buttons">
         <label class="btn btn-secondary metric active">
@@ -58,7 +65,19 @@
         </label>
       </div>
     </div>
-    <div class="options-save-cancel-button-enclosure"></div>
+    <div>
+      <p class="h4 settings-header"> Time format </p>
+    </div>
+    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+      <label class="btn btn-secondary twenty-four active">
+        <input type="radio" name="options" id="option_twenty_four"> 24-hour
+      </label>
+      <label class="btn btn-secondary twelve">
+        <input type="radio" name="options" id="option_twelve"> 12-hour
+      </label>
+    </div>
+  </div>
+  <div class="options-save-cancel-button-enclosure"></div>
   </div>
   <div class="close-config-enclosure enclosure">
     <div class="close-settings-icon">
@@ -66,4 +85,5 @@
     </div>
   </div>
 </body>
+
 </html>
