created the option toggle for time format, and it saves to localStorage

--- a/electron/public/config.html
+++ b/electron/public/config.html
@@ -19,6 +19,11 @@
 </head>
 
 <body class="configuration-window">
+  <div class="close-config-enclosure">
+    <div class="close-settings-icon">
+      <i class="fas fa-times"></i>
+    </div>
+  </div>
   <div class="configuration-container">
     <div class="card card-search-enclosure margin-left search-page-width-items">
       <div class="card-body">
@@ -69,21 +74,17 @@
       <p class="h4 settings-header"> Time format </p>
     </div>
     <div class="btn-group btn-group-toggle" data-toggle="buttons">
-      <label class="btn btn-secondary twenty-four active">
+      <label class="btn btn-secondary twenty-four-hour active">
         <input type="radio" name="options" id="option_twenty_four"> 24-hour
       </label>
-      <label class="btn btn-secondary twelve">
+      <label class="btn btn-secondary twelve-hour">
         <input type="radio" name="options" id="option_twelve"> 12-hour
       </label>
     </div>
   </div>
   <div class="options-save-cancel-button-enclosure"></div>
   </div>
-  <div class="close-config-enclosure enclosure">
-    <div class="close-settings-icon">
-      <i class="fas fa-times"></i>
-    </div>
-  </div>
+
 </body>
 
 </html>
