started work on daily forecast cards

--- a/electron/public/current-forecast.html
+++ b/electron/public/current-forecast.html
@@ -72,8 +72,16 @@
       <div class="hourly-menu-enclosure">
         <a class="hourly-view-link" href="hourly.html"> Hourly </a>
       </div>
-      <div class="forecast-cards-enclosure enclosure">
-        <!--Forecast cards go here -->
+      <div class="twelve-hour-section">
+        <div class="forecast-cards-enclosure enclosure">
+          <!--Forecast cards go here -->
+        </div>
+      </div>
+      <div class="daily-section">
+        <div class="daily-forecast-cards-enclosure enclosure">
+          <!--Forecast cards go here -->
+        </div>
+
       </div>
     </div>
   </div>
