finalized 5-day...still CSS issues but it's working

--- a/electron/public/current-forecast.html
+++ b/electron/public/current-forecast.html
@@ -71,6 +71,7 @@
       <!-- This strip will have forecast weather 'cards'-->
       <div class="hourly-menu-enclosure">
         <a class="hourly-view-link" href="hourly.html"> Hourly </a>
+        <a class="five-day-header"> 5-day </a>
       </div>
       <div class="twelve-hour-section">
         <div class="forecast-cards-enclosure enclosure">
