have a basic map going

--- a/electron/public/current-forecast.html
+++ b/electron/public/current-forecast.html
@@ -61,6 +61,9 @@
         </div>
         <div class="weather-forecast-auto-update"></div>
       </div>
+      <div class="special-features-section">
+        <a class="link-radar special-features-button" href="radar.html">Radar</a>
+      </div>
       <div class="options-settings-enclosure enclosure">
         <div class="settings-icon">
           <i class="fas fa-wrench"></i>
@@ -82,7 +85,6 @@
         <div class="daily-forecast-cards-enclosure enclosure">
           <!--Forecast cards go here -->
         </div>
-
       </div>
     </div>
   </div>
