found suitable radar layer

--- a/electron/public/radar.html
+++ b/electron/public/radar.html
@@ -22,7 +22,9 @@
       <i class="fas fa-times close-button"></i>
     </div>
   </div>
-  <div id="mapid"></div>
+  <div class="map-enclosure">
+    <div id="mapid"></div>
+  </div>
 </body>
 
 </html>
