added a satellite and street map view to radar. Modified some CSS and added a line to sample.env

--- a/electron/public/radar.html
+++ b/electron/public/radar.html
@@ -17,6 +17,10 @@
 </head>
 
 <body>
+  <div class="map-view-options-enclosure">
+    <i class="fas fa-road selected"></i>
+    <i class="fas fa-satellite"></i>
+  </div>
   <div class="close-config-enclosure">
     <div class="close-settings-icon">
       <i class="fas fa-times close-button"></i>
