implemented radar refresh

--- a/electron/public/current-forecast.html
+++ b/electron/public/current-forecast.html
@@ -71,6 +71,7 @@
       </div>
     </div>
     <div class="bottom-strip">
+      <div class="error-message">Connection Error</div>
       <!-- This strip will have forecast weather 'cards'-->
       <div class="hourly-menu-enclosure">
         <a class="hourly-view-link" href="hourly.html"> Hourly </a>
