--- a/electron/public/radar.html
+++ b/electron/public/radar.html
@@ -21,9 +21,12 @@
     <i class="fas fa-road selected"></i>
     <i class="fas fa-satellite"></i>
   </div>
-  <div class="close-config-enclosure">
-    <div class="close-settings-icon">
-      <i class="fas fa-times close-button"></i>
+  <div class="radar-options-enclosure">
+    <div class="refresh-settings-icon radar-option">
+      <i class="fas fa-sync-alt" alt="refresh"></i>
+    </div>
+    <div class="close-settings-icon radar-option">
+      <i class="fas fa-times close-button" alt="close"></i>
     </div>
   </div>
   <div class="map-enclosure">
