--- a/electron/public/config.html
+++ b/electron/public/config.html
@@ -57,7 +57,7 @@
     <div class="options-change-background-image-enclosure">
       <!-- This guy displays thumbnails of the background image options-->
     </div>
-    <div class="options-change-measurement-units-enclosure">
+    <div class="options-change-measurement-units-enclosure enclosure-inline">
       <div>
         <p class="h4 settings-header"> Units </p>
       </div>
@@ -70,21 +70,36 @@
         </label>
       </div>
     </div>
-    <div>
-      <p class="h4 settings-header"> Time format </p>
+    <div class="options-change-time-measurement-enclosure enclosure-inline">
+      <div>
+        <p class="h4 settings-header"> Time format </p>
+      </div>
+      <div class="btn-group btn-group-toggle" data-toggle="buttons">
+        <label class="btn btn-secondary twenty-four-hour active">
+          <input type="radio" name="options" id="option_twenty_four"> 24-hour
+        </label>
+        <label class="btn btn-secondary twelve-hour">
+          <input type="radio" name="options" id="option_twelve"> 12-hour
+        </label>
+      </div>
     </div>
-    <div class="btn-group btn-group-toggle" data-toggle="buttons">
-      <label class="btn btn-secondary twenty-four-hour active">
-        <input type="radio" name="options" id="option_twenty_four"> 24-hour
-      </label>
-      <label class="btn btn-secondary twelve-hour">
-        <input type="radio" name="options" id="option_twelve"> 12-hour
-      </label>
+    <!-- auto refresh options-->
+    <div class="auto-refresh-options-enclosure enclosure-inline">
+      <div>
+        <p class="h4 settings-header"> Auto-refresh </p>
+      </div>
+      <div class="btn-group btn-group-toggle" data-toggle="buttons">
+        <label class="btn btn-secondary auto-refresh-on active">
+          <input type="radio" name="options" id="auto-refresh-on"> On
+        </label>
+        <label class="btn btn-secondary auto-refresh-off">
+          <input type="radio" name="options" id="auto-refresh-on-off"> Off
+        </label>
+      </div>
     </div>
   </div>
   <div class="options-save-cancel-button-enclosure"></div>
   </div>
-
 </body>
 
 </html>
