added a refresh button to the weather forecast screen

--- a/electron/public/current-forecast.html
+++ b/electron/public/current-forecast.html
@@ -65,7 +65,10 @@
         <a class="link-radar special-features-button" href="radar.html">Radar</a>
       </div>
       <div class="options-settings-enclosure enclosure">
-        <div class="settings-icon">
+        <div class="refresh-forecast-icon settings-inline">
+          <i class="fas fa-sync-alt" alt="refresh"></i>
+        </div>
+        <div class="settings-icon settings-inline">
           <i class="fas fa-wrench"></i>
         </div>
       </div>
